fix table spacing

--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,11 @@
 }
 
 td {
-  /* padding-right: 10px; */
+  padding-right: 20px
+}
+
+td:last-child {
+  padding-right: 2px
 }
 
 body {
